--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -12,8 +12,6 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <item name="android:statusBarColor">@android:color/transparent</item>
         <item name="android:windowTranslucentStatus">true</item>
-        <!-- Customize your theme here. -->
-        <item name="android:windowContentTransitions">true</item>
     </style>
 
     <style name="ripple_background">
@@ -28,6 +26,14 @@
 
     <style name="CamActivityTheme" parent="AppTheme" />
 
+    <style name="MediaActivityTransition" parent="AppTheme">
+        <item name="android:statusBarColor">@android:color/black</item>
+        <!--<item name="android:windowContentTransitions">true</item>-->
+        <item name="android:windowEnterTransition">@transition/details_window_enter_transition
+        </item>
+        <item name="android:windowReturnTransition">@transition/details_window_return_transition
+        </item>
+    </style>
     <!--普通样式-->
     <style name="SwitchButtonNormal">
         <item name="kswThumbDrawable">@drawable/switch_btn_thumb_selector</item>
