--- a/app/src/main/res/layout/fragment_video_view.xml
+++ b/app/src/main/res/layout/fragment_video_view.xml
@@ -2,17 +2,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_white"
+    android:background="@color/color_black"
     android:clickable="true"
     android:fitsSystemWindows="true"
     tools:context=".n.view.media.BigPicFragment">
 
-    <ImageView
-        android:id="@+id/imgV_show_pic"
-        android:layout_width="240dp"
-        android:layout_height="240dp"
+    <VideoView
+        android:id="@+id/vv_play_video"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:scaleType="centerCrop"
         android:transitionName="picDetailsFragment"
         tools:ignore="ContentDescription,UnusedAttribute" />
 </FrameLayout>
