--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -136,6 +136,7 @@
     <style name="ripple_background">
         <item name="android:background">@null</item>
     </style>
+
     <style name="ripple_background_borderless">
         <!--<item name="android:background">?attr/selectableItemBackgroundBorderless</item>-->
         <item name="android:background">@null</item>
@@ -168,4 +169,6 @@
         <item name="android:paddingTop">4dp</item>
         <item name="android:paddingBottom">4dp</item>
     </style>
+
+    <style name="MediaActivityTransition" parent="AppTheme" />
 </resources>
