--- a/app/src/main/res/layout/fragment_home_mine_relativesandfriends_addfriends.xml
+++ b/app/src/main/res/layout/fragment_home_mine_relativesandfriends_addfriends.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
+
     android:background="@color/color_white"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -32,6 +33,8 @@
     </RelativeLayout>
 
     <EditText
+        android:focusableInTouchMode="false"
+        android:clickable="true"
         android:id="@+id/et_friend_phonenumber"
         android:layout_marginTop="8dp"
         android:layout_marginLeft="20dp"
