--- a/app/src/main/res/layout/layout_fragment_media_details.xml
+++ b/app/src/main/res/layout/layout_fragment_media_details.xml
@@ -1,63 +1,14 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_gravity="center"
+    android:scaleType="fitCenter"
+    tools:ignore="ContentDescription">
 
-    <LinearLayout
-        android:id="@+id/details_container"
+    <com.cylan.photoview.PhotoView
+        android:scaleType="fitCenter"
+        android:id="@+id/details_album_image"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
-
-        <FrameLayout
-            android:id="@+id/details_header_container"
-            android:layout_width="match_parent"
-            android:layout_height="300dp"
-            android:background="#000"
-            android:transitionGroup="true">
-
-            <ImageView
-                android:id="@+id/details_background_image"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                tools:ignore="ContentDescription" />
-
-            <ImageView
-                android:id="@+id/details_album_image"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:layout_gravity="start|bottom"
-                android:layout_marginBottom="16dp"
-                android:layout_marginStart="16dp"
-                tools:ignore="ContentDescription" />
-        </FrameLayout>
-
-        <LinearLayout
-            android:id="@+id/details_text_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:transitionGroup="true">
-
-            <TextView
-                android:id="@+id/details_album_title"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_margin="24dp"
-                android:fontFamily="sans-serif-light"
-                android:textSize="40sp" />
-
-            <TextView
-                android:id="@+id/details_album_description"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginEnd="24dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="12dp"
-                android:lineSpacingMultiplier="1.2"
-                android:text="lorem"
-                android:textSize="20sp" />
-        </LinearLayout>
-    </LinearLayout>
-</ScrollView>
+        android:layout_height="match_parent" />
+</FrameLayout>
