--- a/app/src/main/res/values-v21/styles.xml
+++ b/app/src/main/res/values-v21/styles.xml
@@ -28,7 +28,7 @@
 
     <style name="MediaActivityTransition" parent="AppTheme">
         <item name="android:statusBarColor">@android:color/black</item>
-        <!--<item name="android:windowContentTransitions">true</item>-->
+        <item name="android:windowContentTransitions">true</item>
         <item name="android:windowEnterTransition">@transition/details_window_enter_transition
         </item>
         <item name="android:windowReturnTransition">@transition/details_window_return_transition
