--- a/app/src/main/res/layout/layout_fragment_media_video_details.xml
+++ b/app/src/main/res/layout/layout_fragment_media_video_details.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_gravity="center"
+    android:background="@color/color_black"
     tools:ignore="ContentDescription">
 
     <com.cylan.photoview.PhotoView
