1.从联系人添加亲友的搜索和排序功能初步实现

--- a/app/src/main/res/layout/fragment_mine_relativeandfriend_share_devices.xml
+++ b/app/src/main/res/layout/fragment_mine_relativeandfriend_share_devices.xml
@@ -66,6 +66,7 @@
         android:layout_height="wrap_content" />
 
     <RelativeLayout
+        android:id="@+id/rl_share_smartcamera"
         android:layout_marginLeft="15dp"
         android:layout_width="match_parent"
         android:layout_height="67dp">
