多渠道编译脚本大量完善

--- a/app/src/main/res/layout/fragment_home_mine_personal_information.xml
+++ b/app/src/main/res/layout/fragment_home_mine_personal_information.xml
@@ -86,7 +86,7 @@
             android:layout_alignParentRight="true"
             android:layout_width="49dp"
             android:layout_height="49dp"
-            android:src="@drawable/ic_launcher" />
+            android:src="@mipmap/ic_launcher" />
 
         <View
             android:layout_alignParentBottom="true"
