--- a/app/src/main/res/layout/layout_item_vedio_wonderful.xml
+++ b/app/src/main/res/layout/layout_item_vedio_wonderful.xml
@@ -51,7 +51,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:scaleType="fitXY"
-                android:src="@drawable/ic_launcher"
+                android:src="@mipmap/ic_launcher"
                 android:transitionName="picDetailsFragment" />
 
             <ImageView
