--- a/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
+++ b/app/src/main/res/layout/layout_bell_after_live_hot_seat.xml
@@ -26,7 +26,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical|end"
-        android:src="@drawable/icon_mic_on" />
+        android:src="@drawable/bell_live_port_mic" />
 
 
 </FrameLayout>
