1.分享到亲友界面初步实现 2.分享到通讯录界面初步实现

--- a/app/src/main/res/layout/fragment_home_mine_personal_information.xml
+++ b/app/src/main/res/layout/fragment_home_mine_personal_information.xml
@@ -49,12 +49,14 @@
             android:textSize="12sp" />
 
         <TextView
+            android:id="@+id/tv_user_account"
             android:layout_below="@id/tv_my_id"
             android:paddingTop="8dp"
             android:layout_marginLeft="20dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="15856562525"
+            android:singleLine="true"
             android:textColor="@color/color_333333"
             android:textSize="16sp" />
 
