--- a/app/src/main/res/layout/fragment_mine_add_from_contact.xml
+++ b/app/src/main/res/layout/fragment_mine_add_from_contact.xml
@@ -66,8 +66,9 @@
             android:textColor="@color/color_333333"
             android:textSize="16sp"
             android:layout_centerVertical="true"
-            android:hint="验证信息"
+            android:hint="验证消息"
             android:background="@null"
+            android:maxLength="20"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
             android:layout_width="match_parent"
