--- a/app/src/main/res/layout/fragment_mine_personal_information_mailbox.xml
+++ b/app/src/main/res/layout/fragment_mine_personal_information_mailbox.xml
@@ -67,6 +67,7 @@
             android:textSize="16sp"
             android:layout_centerVertical="true"
             android:hint="邮箱地址"
+            android:maxLength="65"
             android:background="@null"
             android:layout_marginRight="20dp"
             android:layout_marginLeft="20dp"
