--- a/app/src/main/res/layout/fragment_mine_relativeandfriend_add_by_num.xml
+++ b/app/src/main/res/layout/fragment_mine_relativeandfriend_add_by_num.xml
@@ -29,10 +29,72 @@
             android:layout_marginBottom="12dp"
             android:layout_marginLeft="48dp"
             android:hint="对方账号"
+            android:maxLength="65"
             android:inputType="number"
             android:textColorHint="#60ffffff"
             android:background="@null"
             android:textSize="18sp" />
-
     </RelativeLayout>
+
+    <FrameLayout
+        android:id="@+id/fl_display_find_result"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/rl_relative_and_friend_container"
+            android:layout_marginLeft="15dp"
+            android:layout_width="match_parent"
+            android:layout_height="67dp">
+
+            <com.cylan.jiafeigou.widget.roundedimageview.RoundedImageView
+                android:layout_centerVertical="true"
+                android:id="@+id/iv_userhead"
+                android:src="@drawable/pic_head"
+                android:layout_width="43dp"
+                android:layout_height="43dp" />
+
+            <RelativeLayout
+                android:gravity="center_vertical"
+                android:layout_toRightOf="@id/iv_userhead"
+                android:paddingLeft="15dp"
+                android:layout_width="match_parent"
+                android:layout_height="67dp"
+                >
+                <TextView
+                    android:id="@+id/tv_username"
+                    android:textSize="16sp"
+                    android:textColor="@color/color_333333"
+                    android:text="陈香兰"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <TextView
+                    android:id="@+id/tv_user_phone"
+                    android:paddingTop="8dp"
+                    android:layout_below="@id/tv_username"
+                    android:textSize="12sp"
+                    android:textColor="@color/color_8c8c8c"
+                    android:text="12345678901"
+                    android:singleLine="true"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+            </RelativeLayout>
+
+        </RelativeLayout>
+
+        <RelativeLayout
+            android:visibility="gone"
+            android:id="@+id/rl_find_load_progress"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ProgressBar
+                android:layout_centerInParent="true"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+        </RelativeLayout>
+    </FrameLayout>
+
 </LinearLayout>
