走查结果修正

--- a/app/src/main/res/layout/activity_cam_setting.xml
+++ b/app/src/main/res/layout/activity_cam_setting.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_f9f9f9"
+    android:background="@color/color_white"
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.activity.CamSettingActivity">
 
@@ -193,7 +193,6 @@
                         android:layout_centerVertical="true"
                         android:layout_marginStart="10dp"
                         android:layout_toRightOf="@+id/imgv_setting_item_electricity_icon"
-                        android:layout_toStartOf="@+id/sbtn_setting_item_switch_110v"
                         android:orientation="vertical">
 
                         <TextView
