--- a/app/src/main/res/layout/layout_dialog_low_battery.xml
+++ b/app/src/main/res/layout/layout_dialog_low_battery.xml
@@ -6,19 +6,31 @@
     tools:context=".n.view.cam.SetSensitivityDialogFragment">
 
 
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/low_battery_popup_top" />
+    <FrameLayout
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent">
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@drawable/low_battery_popup_top" />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:background="@drawable/low_battery_popup_top_icon" />
+    </FrameLayout>
+
 
     <LinearLayout
-        android:paddingTop="17dp"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/bottom_corner_pop_bg"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="17dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -44,15 +56,22 @@
 
         <TextView
             android:id="@+id/tv_low_battery_dismiss"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            android:layout_gravity="end"
             android:layout_marginLeft="20dp"
             android:layout_marginRight="20dp"
-            android:layout_width="match_parent"
-            android:layout_height="38dp"
-            android:layout_gravity="center"
             android:gravity="center"
             android:text="知道了"
             android:textColor="@color/color_4b9fd5"
             android:textSize="15sp" />
     </LinearLayout>
 
+    <ImageView
+        android:id="@+id/imgv_close_dialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="36dp"
+        android:src="@drawable/btn_close_dialog" />
 </LinearLayout>
