--- a/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
+++ b/app/src/main/res/layout/layout_fragment_dialog_wifi_list.xml
@@ -7,8 +7,22 @@
     android:orientation="vertical"
     tools:context="com.cylan.jiafeigou.n.view.bind.BindDeviceListFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rv_wifi_list"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:padding="24dp"
+            android:text="@string/item_select_wifi"
+            android:textColor="@color/color_black"
+            android:textSize="16sp" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rv_wifi_list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent" />
+    </LinearLayout>
 </android.support.v7.widget.CardView>
