--- a/app/src/main/res/layout/fragment_bind_scan.xml
+++ b/app/src/main/res/layout/fragment_bind_scan.xml
@@ -21,6 +21,6 @@
         android:layout_marginRight="5dp"
         android:layout_marginTop="5dp"
         android:padding="10dp"
-        android:src="@drawable/btn_nav_back" />
+        android:src="@drawable/icon_nav_back_gray" />
 
 </FrameLayout>
