--- a/app/src/main/res/layout/fragment_home_page_list_header.xml
+++ b/app/src/main/res/layout/fragment_home_page_list_header.xml
@@ -1,8 +1,13 @@
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/fLayoutHomeHeaderContainer"
+    android:id="@+id/fLayout_home_page_list_header_container"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:background="@drawable/bg_home_title_daytime">
+    android:layout_height="wrap_content">
+
+    <ImageView
+        android:id="@+id/img_home_page_header_bg"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_home_title_daytime" />
 
     <com.cylan.jiafeigou.widget.wave.SuperWaveView
         android:id="@+id/vWaveAnimation"
@@ -42,15 +47,5 @@
             android:textColor="@android:color/white"
             android:textSize="16sp" />
     </LinearLayout>
-
-    <TextView
-        android:id="@+id/tvHeaderLastTitle"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/dimens_48dp"
-        android:layout_gravity="bottom|center_horizontal"
-        android:gravity="center"
-        android:text="加菲狗"
-        android:textColor="@android:color/white"
-        android:textSize="20sp" />
 </FrameLayout>
 
